--- a/indexOffline.html
+++ b/indexOffline.html
@@ -37,7 +37,7 @@
                         align-items: center;
                         padding: 1%;
                         box-sizing:  border-box;">
-                <img src="image/fs.svg" style="height: 100%;width: 100%;">
+                <img src="images/logo.svg" style="height: 100%;width: 100%;">
             </div>
         </div>
     </body>
